tests/NormalTests/paczka1/fuzzy1/39843241.err
Error in line 4: 4T1k A387 9,1
Error in line 2: VNCKHuzw3l A886 40,8
Error in line 20: 4T1k A886 39,0
Error in line 8: 7UB5Z9 A387 18,1
Error in line 10: 9iMPfdrb7T S385 69,7
Error in line 29: hCE6 S38s s3,7
